# lv_drivers

./: .gitignore  CMakeLists.txt  README.md  library.json  lv-drivers.pc.in  lv_drivers.mk  lv_drv_common.h  lv_drv_conf_templ.c  lv_drv_conf_templ.h  lv_drv_conf_template.h  win_drv.c  win_drv.h
cmake/: wayland_driver.cmake
display/: GC9A01.c  GC9A01.cpp  GC9A01.h  ILI9340.c  ILI9340.h  ILI9341.c  ILI9341.h  R61581.c  R61581.h  SHARP_MIP.c  SHARP_MIP.h  SSD1306.c  SSD1306.h  SSD1963.c  SSD1963.h  ST7565.c  ST7565.h  UC1610.c  UC1610.h  bsd_fbdev.c  bsd_fbdev.h  display.mk  drm.c  drm.h  fbdev.c  fbdev.h  monitor.c  monitor.h
gtkdrv/: README.md  gtkdrv.c  gtkdrv.h
indev/: AD_touch.c  AD_touch.h  AR10XX.c  AR10XX.h  FT5406EE8.c  FT5406EE8.h  XPT2046.c  XPT2046.h  encoder.c  encoder.h  evdev.c  evdev.h  indev.mk  keyboard.c  keyboard.h  libinput.c  libinput.h  libinput_drv.h  mouse.c  mouse.h  mouse_hid.c  mouse_hid.h  mousewheel.c  mousewheel.h  xkb.c  xkb.h
sdl/: sdl.c  sdl.h  sdl_common.c  sdl_common.h  sdl_gpu.c  sdl_gpu.h
wayland/: README.md  sma.c  sma.h  smm.c  wayland.c  wayland.h
win32drv/: win32drv.c  win32drv.h
x11/: x11.c  x11.h
